src/github.com/ebay/akutan/query/parser/testdata/select/errors/star_var.bql
SELECT * ?rims 
WHERE {
    ?rims <color> "Red"
}
